<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.auth.ui.login.LoginFragment">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/login_lottie"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toTopOf="@+id/username_til"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:lottie_autoPlay="true"
        app:lottie_loop="false"
        app:lottie_rawRes="@raw/login_lottie" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_til"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/username"
        app:boxStrokeColor="@color/til_selector"
        app:endIconMode="clear_text"
        app:hintTextColor="#2573FA"
        app:layout_constraintBottom_toTopOf="@+id/password_til"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_lottie"
        app:layout_constraintWidth_percent="0.8"
        app:startIconDrawable="@drawable/ic_badge_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_tiet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_til"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/password"
        app:boxStrokeColor="@color/til_selector"
        app:endIconMode="password_toggle"
        app:hintTextColor="#2573FA"
        app:layout_constraintBottom_toTopOf="@+id/forget_password"
        app:layout_constraintEnd_toEndOf="@id/username_til"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/username_til"
        app:layout_constraintTop_toBottomOf="@+id/username_til"
        app:startIconDrawable="@drawable/ic_lock_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_tiet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:textColor="@color/teal_200"
        app:layout_constraintBottom_toTopOf="@id/login_button"
        app:layout_constraintEnd_toEndOf="@id/password_til"
        app:layout_constraintTop_toBottomOf="@id/password_til" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/log_in"
        app:backgroundTint="@color/button"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toTopOf="@id/register_cta"
        app:layout_constraintEnd_toEndOf="@id/password_til"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/password_til"
        app:layout_constraintTop_toBottomOf="@+id/forget_password" />

    <TextView
        android:id="@+id/register_cta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/cta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/register_cta_highlight"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@id/login_button"
        app:layout_constraintTop_toBottomOf="@id/login_button" />

    <TextView
        android:id="@+id/register_cta_highlight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cta_highlight"
        android:textColor="@color/teal_200"
        app:layout_constraintBottom_toBottomOf="@id/register_cta"
        app:layout_constraintEnd_toEndOf="@id/login_button"
        app:layout_constraintStart_toEndOf="@id/register_cta"
        app:layout_constraintTop_toTopOf="@id/register_cta" />


</androidx.constraintlayout.widget.ConstraintLayout>