...
            app:destination="@id/mainFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <navigation
        android:id="@+id/auth_nav_graph"
        app:startDestination="@id/loginFragment">
        <fragment
            android:id="@+id/loginFragment"
            android:name="com.example.movieindex.feature.auth.ui.login.LoginFragment"
            android:label="fragment_login"
            tools:layout="@layout/fragment_login">
            <action
                android:id="@+id/action_loginFragment_to_registerFragment"
                app:destination="@id/registerFragment" />
            <argument
                android:name="authArgs"
                android:defaultValue="@null"
                app:argType="string"
                app:nullable="true" />
            <action
...
